--- a/src/main/resources/templates/account/findAccount.html
+++ b/src/main/resources/templates/account/findAccount.html
@@ -39,7 +39,7 @@
                                 </div>
 
                                 <form onsubmit="return false">
-                                    <table class="form_table">
+                                    <table class="col_header_table_color">
                                         <colgroup>
                                             <col style="width:150px;">
                                             <col style="width:auto;">
@@ -113,7 +113,7 @@
                                 </div>
 
                                 <form onsubmit="return false">
-                                    <table class="form_table">
+                                    <table class="col_header_table_color">
                                         <colgroup>
                                             <col style="width:150px;">
                                             <col style="width:auto;">
