--- a/src/main/resources/templates/account/signUp.html
+++ b/src/main/resources/templates/account/signUp.html
@@ -24,7 +24,7 @@
                     <!-- form_wrap start -->
                     <div class="form_wrap">
                         <form id="signUpForm" th:action="@{/signUp}" th:object="${signUpFormDto}" method="post">
-                            <table class="form_table">
+                            <table class="col_header_table_color">
                                 <colgroup>
                                     <col style="width:15%;">
                                     <col style="width: auto;">
