--- a/src/main/resources/templates/admin/item/itemEnroll.html
+++ b/src/main/resources/templates/admin/item/itemEnroll.html
@@ -98,8 +98,7 @@
                                     <label th:for="*{itemDetail}">상품 상세 내용 <span>*</span></label>
                                 </th>
                                 <td>
-                                            <textarea th:field="*{itemDetail}" placeholder="상세 내용"
-                                                      id="item_detail_textarea"></textarea>
+                                    <textarea th:field="*{itemDetail}" placeholder="상세 내용" id="item_detail_textarea"></textarea>
                                     <span class="text-danger detail_warn">상품의 상세 내용을 입력해주세요.</span>
                                 </td>
                             </tr>
