--- a/src/main/resources/templates/board/review/reviewEnroll.html
+++ b/src/main/resources/templates/board/review/reviewEnroll.html
@@ -61,7 +61,7 @@
                         <div class="review_form_wrap">
                             <form id="reviewEnrollForm" th:action="@{'/board/review/enroll'}" th:object="${reviewDto}"
                                   method="post">
-                                <table>
+                                <table class="col_header_table_basic">
                                     <colgroup>
                                         <col style="width:15%;">
                                         <col style="width: auto;">
