--- a/src/main/resources/templates/cart/cartList.html
+++ b/src/main/resources/templates/cart/cartList.html
@@ -20,8 +20,8 @@
                         <div class="divider"></div>
                     </div>
                     <div class="cart_body mt-5">
-                        <div class="table-responsive small table_box">
-                            <table class="table table-sm">
+                        <div class="table_wrap">
+                            <table class="row_header_table">
                                 <thead>
                                     <tr>
                                         <th style="width: 8%;" scope="col">
