--- a/src/main/resources/templates/order/orderForm.html
+++ b/src/main/resources/templates/order/orderForm.html
@@ -94,7 +94,7 @@
                             </div>
                             <div class="body">
                                 <form th:action="@{/order/orderForm}" th:object="${account}" method="post">
-                                    <table class="form_table">
+                                    <table class="col_header_table_color">
                                         <colgroup>
                                             <col style="width:15%;">
                                             <col style="width:auto;">
@@ -191,7 +191,7 @@
                                 <h2>할인/부가결제</h2>
                             </div>
                             <div class="body">
-                                <table class="form_table">
+                                <table class="col_header_table_color">
                                     <colgroup>
                                         <col style="width:15%;">
                                         <col style="width:auto;">
