--- a/src/main/resources/templates/account/profile.html
+++ b/src/main/resources/templates/account/profile.html
@@ -26,7 +26,7 @@
                     <div class="modify_body mt-5">
 
                         <form id="profileForm" th:action="@{/account/profile}" th:object="${profileFormDto}" method="post">
-                            <table class="form_table">
+                            <table class="col_header_table_color">
                                 <colgroup>
                                     <col style="width:15%;">
                                     <col style="width:auto;">
