--- a/src/main/resources/templates/account/updatePw.html
+++ b/src/main/resources/templates/account/updatePw.html
@@ -23,7 +23,7 @@
                     <div class="update_pw_body mt-5">
                         <div class="result_success" th:if="${not #strings.isEmpty(result) && result != 'fail'}">
                             <form id="updatePwForm" th:action="@{/update/pw}" method="post">
-                                <table class="form_table">
+                                <table class="col_header_table">
                                     <colgroup>
                                         <col style="width:15%;">
                                         <col style="width: auto;">
