--- a/src/main/resources/templates/admin/item/itemMng.html
+++ b/src/main/resources/templates/admin/item/itemMng.html
@@ -20,103 +20,101 @@
                         <div class="divider"></div>
                     </div>
                     <div class="item_mng_body mt-5">
-                        <div class="table-responsive">
-                            <form id="search_form" th:object="${items}">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th style="width: 10%;" scope="col">번호</th>
-                                            <th style="width: auto;" scope="col">상품명</th>
-                                            <th style="width: 10%;" scope="col">상태</th>
-                                            <th style="width: 10%;" scope="col">등록자</th>
-                                            <th style="width: 10%;" scope="col">등록일</th>
-                                            <th style="width: 15%;" scope="col">선택</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr th:each="item, status: ${items.getContent()}">
-                                            <td
-                                                th:text="${items.getTotalElements() - (items.getSize() * items.getNumber()) - status.index}">
-                                            </td>
-                                            <td>
-                                                <button class="item_dtl_btn" type="button" th:value="${item.id}"
-                                                    th:text="${item.itemNm}"
-                                                    onclick="moveItemDtlPage(this.value)"></button>
-                                            </td>
-                                            <td th:text="${item.itemSellStatus == sellStatus} ? '판매' : '품절'">
-                                            </td>
-                                            <td th:text="${item.createdBy}"></td>
-                                            <td th:text="${#temporals.format(item.regTime, 'yyyy-MM-dd HH:mm:ss')}">
-                                            </td>
-                                            <td>
-                                                <div class="btn_box">
-                                                    <button th:data-id="${item.id}" class="black_btn_w90_h30 modify_btn" type="button">수정</button>
-                                                    <button th:data-id="${item.id}" class="white_btn_w90_h30 delete_btn" type="button">삭제</button>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                        <form id="search_form" th:object="${items}">
+                            <table class="row_header_table">
+                                <thead>
+                                    <tr>
+                                        <th style="width: 10%;" scope="col">번호</th>
+                                        <th style="width: auto;" scope="col">상품명</th>
+                                        <th style="width: 10%;" scope="col">상태</th>
+                                        <th style="width: 10%;" scope="col">등록자</th>
+                                        <th style="width: 10%;" scope="col">등록일</th>
+                                        <th style="width: 15%;" scope="col">선택</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr th:each="item, status: ${items.getContent()}">
+                                        <td
+                                            th:text="${items.getTotalElements() - (items.getSize() * items.getNumber()) - status.index}">
+                                        </td>
+                                        <td>
+                                            <button class="item_dtl_btn" type="button" th:value="${item.id}"
+                                                th:text="${item.itemNm}"
+                                                onclick="moveItemDtlPage(this.value)"></button>
+                                        </td>
+                                        <td th:text="${item.itemSellStatus == sellStatus} ? '판매' : '품절'">
+                                        </td>
+                                        <td th:text="${item.createdBy}"></td>
+                                        <td th:text="${#temporals.format(item.regTime, 'yyyy-MM-dd HH:mm:ss')}">
+                                        </td>
+                                        <td>
+                                            <div class="btn_box">
+                                                <button th:data-id="${item.id}" class="black_btn_w90_h30 modify_btn" type="button">수정</button>
+                                                <button th:data-id="${item.id}" class="white_btn_w90_h30 delete_btn" type="button">삭제</button>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
 
-                                <div class="pagination mt-3"
-                                    th:with="start=${(items.number/maxPage)*maxPage + 1}, end=(${(items.totalPages == 0) ? 1 :
-                                     (start + (maxPage - 1) < items.totalPages ? start + (maxPage - 1) : items.totalPages)})">
-                                    <ul>
-                                        <li class="prev" th:classappend="${items.first} ? 'disabled'">
-                                            <a th:onclick="'javascript:page(0)'">
-                                                <i class="fa-solid fa-angle-left"></i><i
-                                                    class="fa-solid fa-angle-left"></i>
-                                            </a>
-                                        </li>
-                                        <li class="prev" th:classappend="${items.first} ? 'disabled'">
-                                            <a th:onclick="'javascript:page(' +  ${items.number - 1} + ')'">
-                                                <i class="fa-solid fa-angle-left"></i>
-                                            </a>
-                                        </li>
-                                        <li class="page" th:each="page: ${#numbers.sequence(start, end)}"
-                                            th:classappend="${items.number eq page - 1} ? 'active' : ''">
-                                            <a th:onclick="'javascript:page(' + ${page - 1} + ')'"
-                                                th:inline="text">[[${page}]]</a>
-                                        </li>
-                                        <li class="next" th:classappend="${items.last} ? 'disabled'">
-                                            <a th:onclick="'javascript:page(' + ${items.number + 1} + ')'">
-                                                <i class="fa-solid fa-angle-right"></i>
-                                            </a>
-                                        </li>
-                                        <li class="next" th:classappend="${items.last} ? 'disabled'">
-                                            <a th:onclick="'javascript:page(' + ${items.totalPages - 1} + ')'">
-                                                <i class="fa-solid fa-angle-right"></i><i
-                                                    class="fa-solid fa-angle-right"></i>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
+                            <div class="pagination"
+                                th:with="start=${(items.number/maxPage)*maxPage + 1}, end=(${(items.totalPages == 0) ? 1 :
+                                 (start + (maxPage - 1) < items.totalPages ? start + (maxPage - 1) : items.totalPages)})">
+                                <ul>
+                                    <li class="prev" th:classappend="${items.first} ? 'disabled'">
+                                        <a th:onclick="'javascript:page(0)'">
+                                            <i class="fa-solid fa-angle-left"></i><i
+                                                class="fa-solid fa-angle-left"></i>
+                                        </a>
+                                    </li>
+                                    <li class="prev" th:classappend="${items.first} ? 'disabled'">
+                                        <a th:onclick="'javascript:page(' +  ${items.number - 1} + ')'">
+                                            <i class="fa-solid fa-angle-left"></i>
+                                        </a>
+                                    </li>
+                                    <li class="page" th:each="page: ${#numbers.sequence(start, end)}"
+                                        th:classappend="${items.number eq page - 1} ? 'active' : ''">
+                                        <a th:onclick="'javascript:page(' + ${page - 1} + ')'"
+                                            th:inline="text">[[${page}]]</a>
+                                    </li>
+                                    <li class="next" th:classappend="${items.last} ? 'disabled'">
+                                        <a th:onclick="'javascript:page(' + ${items.number + 1} + ')'">
+                                            <i class="fa-solid fa-angle-right"></i>
+                                        </a>
+                                    </li>
+                                    <li class="next" th:classappend="${items.last} ? 'disabled'">
+                                        <a th:onclick="'javascript:page(' + ${items.totalPages - 1} + ')'">
+                                            <i class="fa-solid fa-angle-right"></i><i
+                                                class="fa-solid fa-angle-right"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
 
-                                <div class="search_box" th:object="${itemSearchDto}">
-                                    <select class="search_date_type" th:field="*{searchDateType}">
-                                        <option value="all">전체기간</option>
-                                        <option value="1d">1일</option>
-                                        <option value="1w">1주</option>
-                                        <option value="1m">1개월</option>
-                                        <option value="6m">6개월</option>
-                                    </select>
-                                    <select class="search_sell_status" th:field="*{searchSellStatus}">
-                                        <option value="">판매상태(전체)</option>
-                                        <option value="SELL">판매</option>
-                                        <option value="SOLD_OUT">품절</option>
-                                    </select>
-                                    <select class="search_by" th:field="*{searchBy}">
-                                        <option value="itemNm">상품명</option>
-                                        <option value="createdBy">등록자</option>
-                                    </select>
-                                    <input class="search_query" th:field="*{searchQuery}" type="text"
-                                        placeholder="검색어를 입력해주세요">
-                                    <button class="search_btn black_btn_w90_h40" type="button">검색</button>
-                                    <button class="white_btn_w90_h40 ms-2" type="button"
-                                        onclick="moveItemEnrollPage()">상품 등록</button>
-                                </div>
-                            </form>
-                        </div>
+                            <div class="search_box" th:object="${itemSearchDto}">
+                                <select class="search_date_type" th:field="*{searchDateType}">
+                                    <option value="all">전체기간</option>
+                                    <option value="1d">1일</option>
+                                    <option value="1w">1주</option>
+                                    <option value="1m">1개월</option>
+                                    <option value="6m">6개월</option>
+                                </select>
+                                <select class="search_sell_status" th:field="*{searchSellStatus}">
+                                    <option value="">판매상태(전체)</option>
+                                    <option value="SELL">판매</option>
+                                    <option value="SOLD_OUT">품절</option>
+                                </select>
+                                <select class="search_by" th:field="*{searchBy}">
+                                    <option value="itemNm">상품명</option>
+                                    <option value="createdBy">등록자</option>
+                                </select>
+                                <input class="search_query" th:field="*{searchQuery}" type="text"
+                                    placeholder="검색어를 입력해주세요">
+                                <button class="search_btn black_btn_w90_h40" type="button">검색</button>
+                                <button class="white_btn_w90_h40 ms-2" type="button"
+                                    onclick="moveItemEnrollPage()">상품 등록</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </section>
