--- a/src/main/resources/templates/board/review/reviewUpdate.html
+++ b/src/main/resources/templates/board/review/reviewUpdate.html
@@ -44,7 +44,7 @@
                         <!-- review_form_wrap start -->
                         <div class="review_form_wrap">
                             <form th:object="${review}" method="post">
-                                <table style="table-layout: fixed !important;">
+                                <table class="col_header_table_basic">
                                     <colgroup>
                                         <col style="width:20%;">
                                         <col style="width: auto;">
